--- a/src/HomePage/Header.scss
+++ b/src/HomePage/Header.scss
@@ -1,48 +1,13 @@
 .header {
   display: flex;
   flex-direction: column;
-  // align-items: center;
   justify-content: center;
   margin: auto;
-  // width: 561px;
-  
-  // &__container {
-  //   display: grid;
-  //   grid-template-areas:
-  //     'homepage__navbar'
-  //     'homepage__content'
-  //     'homepage__footer';
-  // }
 
-  // &__navbar {
-  //   grid-area: homepage__navbar;
-  // }
 
-  // &__content {
-  //   grid-area: homepage__content;
-  // }
-
-  // &__footer {
-  //   grid-area: homepage__footer;
-  // }
-
-  // &__carrotcar {
-  //   width: 100%;
-  // }
-
-  // &__heroimage {
-  //   display: grid;
-  //   grid-template-columns: 1fr 1fr;
-  // }
-
-  // &__header {
-  //   display: flex;
-  //   flex-direction: column;
-  //   // align-items: center;
-  //   justify-content: center;
-  //   margin: auto;
-  //   width: 561px;
-  // }
+  @media only screen and (max-width: 1500px) {
+    padding-top: 100px;
+  }
 
   &__text1 {
     // height: 86px;
@@ -58,9 +23,6 @@
   }
 
   &__text2 {
-    // width: 561px;
-    // height: 64px;
-    // font-family: Helvetica;
     font-size: 1.4rem;
     font-weight: normal;
     font-stretch: normal;
@@ -118,10 +80,10 @@
 
 
 
-body {
-  margin: 0;
-  padding: 0;
-}
+// body {
+//   margin: 0;
+//   padding: 0;
+// }
 #map {
   position: absolute;
   top: 0;
