Move state away from redux. Add Login hover button

--- a/src/HomePage/LoginSignup.scss
+++ b/src/HomePage/LoginSignup.scss
@@ -137,6 +137,10 @@
     border-radius: 28.5px;
     background-color: var(--almost-black);
     // text-align: center;
+
+    &:hover {
+      background-color: var(--carrot-color);
+    }
   }
 
   &__login-text {
